--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="./assets/font/stylesheet.css" />
+
+    <!-- Css -->
+     <link rel="stylesheet" href="./assets/css/main.css">
   </head>
 
   <body>
