--- a/sign-in.html
+++ b/sign-in.html
@@ -44,18 +44,16 @@
 
   <body>
     <!-- Header -->
-    <header id="header" class="header"></header>
+    <header id="header"></header>
     <script>
         load("#header", "./template/header.html");
     </script>
 
     <!-- Main -->
-    <div class="container">
-      <h1>Home Page</h1>
-    </div>
+    <h1>Sign In Page</h1>
 
     <!-- Footer -->
-    <footer id="footer" class="footer"></footer>
+    <footer id="footer"></footer>
     <script>
         load("#footer", "./template/footer.html");
     </script>
